# mipea

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  Makefile  Makefile.am  Makefile.in  README.md  TODO  aclocal.m4  bcm2835_peripherals.c  bcm2835_peripherals.h  bcm_info.c  bcm_info.sh  clock.c  config.h.in  configure  configure.ac  example.c  gpio.c  gpio.h  i2c_example.c  meson.build  pwm.c  pwm.h  pwm_example.c  servo_example.c  spi.c  spi.h  spi_example.c
doc/: Makefile  clock_manager.rst  conf.py  doc-license.rst  fdl.rst  gpio.rst  gpl.rst  i2c.rst  index.rst  install.rst  license.rst  mipea.rst  peripherals.rst  pwm.rst  spi.rst  timer.rst
examples/: gpio_example.c  i2c_example.c  pwm_example.c  spi_example.c
src/: Makefile.am  clock.c  clock.h  clock_manager.c  clock_manager.h  dma.c  dma.h  gpio.c  gpio.h  i2c.c  i2c.h  mailbox_mod.c  mailbox_mod.h  mipea.c  mipea.h  peripherals.c  peripherals.h  pwm.c  pwm.h  spi.c  spi.h  timer.c  timer.h
src/core/: bcm2835_peripherals.c
