AM_CFLAGS=-Wall

lib_LTLIBRARIES=libmipea.la
libmipea_la_SOURCES=clock_manager.c dma.c gpio.c i2c.c mailbox_mod.c mipea.c peripherals.c pwm.c spi.c timer.c
libmipea_la_LDFLAGS=-version-info 2:2:0

pkginclude_HEADERS=clock_manager.h dma.h gpio.h i2c.h mailbox_mod.h mipea.h peripherals.h pwm.h spi.h timer.h
